--- a/app/webroot/css/master.scss
+++ b/app/webroot/css/master.scss
@@ -187,7 +187,7 @@ nav:not(#mainnav) {
 	width: 100%;
 }
 
-.matchlists, .teamlists {
+#matchlists, #teamlists {
 	display: none;
 	a {
 	line-height: 1.2em !important;
